Removed linting and github workflows so the app.css should now compile locally and will not be re-compiled during deployment

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "prettier": "@trelliscommerce/prettier-config",
   "lint-staged": {
-    "*.{js,css}": "prettier --write"
+    "*.js": "prettier --write",
+    "assets/*-tailwind.css": "prettier --write",
+    "!assets/app.css": "prettier --write"
   }
 }
